Got rid of Geany project, because Geany only handles absolute paths. Also, because premake generates CodeLite project files (among others).
Changed .gitignore to be directory-based.  Made an exception for make
files on Linux so that Linux developers can grab the source and compile
without installing any extra tools.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
-# Ignore intermediate build files
-*.[do]
+# Ignore binaries
+bin/
 
-# Ignore build results
-*.so
+# Ignore build files, except make files on Linux (for convenience)
+build/
+!build/linux/gmake/
 
